# mini-projects

Python/fast-api-movie-rec/: README.md
Python/fast-api-movie-rec/Backend/movie-recommender/: pyproject.toml
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/: main.py
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/api/: movie.py
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/constants/: app_constants.py
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/data/: user_searched_movies.csv
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/data_structures/: trie.py
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/recommender/: app.py
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/schemas/: movie.py
Python/fast-api-movie-rec/Backend/movie-recommender/movie_recommender/utils/: file_utils.py  pandas_utils.py
Python/fast-api-movie-rec/Frontend/Movie-Reccommender/: package-lock.json  package.json
Python/fast-api-movie-rec/Frontend/Movie-Reccommender/src/: App.tsx  main.tsx  react-loading.d.ts  theme.ts
Python/fast-api-movie-rec/Frontend/Movie-Reccommender/src/components/: AutoCompleteSearch.tsx  ColorModeSwitch.tsx  MainLayout.tsx  MovieCard.tsx  MovieGrid.tsx  MovieSearch.tsx  Navbar.tsx  ThemedBorderedBox.tsx  Vote.tsx
Python/fast-api-movie-rec/Frontend/Movie-Reccommender/src/services/: api-client.ts  image-urls.ts
Python/flask-apis/: README.md  movie-data.json  movie-data.py
(+1 files in other folders)
