[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["NITIN VIVEK BHARTI <coe12b018@iiitdm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
pandas = "^2.2.2"
uvicorn = "^0.30.6"
scikit-learn = "^1.5.2"

[tool.poetry.scripts]
movie-recommender = "movie_recommender.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
